gave the body container a margin of 0 auto and a max width of 900px in order to keep the desktop responsiveness in sync. the line on the timeline is skewed but going to fix that. have to add more images to the carousel and refactor some of the other code in order to get this pixel perfect. still have the fonts to import and include. want to figure out why the container class is only the height of the nav and hero images even though its div wraps the entire section of content.

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,8 @@ body {
   background-size: cover;
 }
 .Container {
-  margin: 0 5em 0 5em;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
 /* Navigation Header */
